fix(avo-2219): wrap title in video description component
https://meemoo.atlassian.net/browse/AVO-2219

--- a/src/item/components/ItemVideoDescription.scss
+++ b/src/item/components/ItemVideoDescription.scss
@@ -14,6 +14,16 @@
 		}
 	}
 
+	.c-toolbar__left {
+		flex-grow: 1;
+		max-width: 100%;
+		padding-left: 0.8rem;
+	}
+
+	.c-toolbar__right {
+		flex-shrink: 1;
+	}
+
 	@media (max-width: $g-bp2) {
 		.c-video-column {
 			margin-left: 0;
